correciones en nav

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -10,10 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
 </head>
 <body>
-    <nav class="navbar navbar sticky-top navbar-expand-lg px-4">
+    <nav class="encabezado navbar navbar sticky-top navbar-expand-lg px-4">
         <div class="container-fluid">
             <a class="logo-todoexplosion" href="../index.html" >
-                <img src="../Imagenes/Logo/logo_todo_explosion-removebg-preview.png" alt="logo-todoexplosion" width="80" height="auto" class="align-text-top">
+                <img src="../Imagenes/Logo/logo_todo_explosion-removebg-preview.png" alt="logo-todoexplosion" width="130" height="auto" class="align-text-top">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
