--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -50,22 +50,15 @@
     </div>
   </nav>
 
-    <!-- <div class="text-center p-5 m-3">
-            
-        <h2 class="m-2">PREGUNTAS FRECUENTES</h2>
-        <p class="m-5 ">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Earum debitis quaerat provident et illum quas velit hic inventore autem rerum vitae dicta modi impedit eligendi iure ab laudantium architecto, quae culpa? Quas eum expedita sed consectetur sequi repellendus libero magni dolorem. Porro rerum reiciendis consectetur distinctio non deleniti, vitae doloremque enim optio illo laborum iure officiis ullam aliquam! Similique animi provident tempora, ea nisi consectetur a rerum sequi quia beatae vero nobis inventore mollitia, consequatur nostrum, quos libero voluptatem harum voluptate laborum? Dolore sint accusantium perferendis, repudiandae soluta reprehenderit, totam veniam eligendi dignissimos saepe ullam provident quos nam molestiae sequi. Nulla laborum ab alias temporibus non, saepe, molestiae inventore repellendus recusandae cupiditate repudiandae modi perferendis placeat! Amet voluptates dolorum ipsam. Corporis modi totam velit, fugiat consequatur cumque eos, commodi consectetur quaerat assumenda vero blanditiis alias tenetur debitis hic iste amet possimus enim.
-        </p>
-    </div> -->
-    <div  class="preg-frecu ">
+    <div  class="preg-frecu">
       <img src="../Imagenes/todoexplosionn.jpg" class="w-75 rounded mx-auto d-block py-5" alt="...">
     </div>
 
-    <div class="acordeon">
+    <div class="accordion pb-5">
       <div class="accordion col-6 mx-auto" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button text-dark bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+            <button class="accordion-button text-light bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
               <strong class="strong">¿Que medios de pago aceptan?</strong>
             </button>
           </h2>
@@ -77,7 +70,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed text-dark bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+            <button class="accordion-button collapsed text-light bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
               <strong>¿Realizan envios?</strong>
             </button>
           </h2>
@@ -89,7 +82,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed text-dark bg-success" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+            <button class="accordion-button collapsed text-light bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
               <strong>¿Donde estamos ubicados?</strong>
             </button>
           </h2>
