--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="../sass/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
     </head>
-    <body>
+    <body class="fondo-terciario">
         <nav class="encabezado navbar navbar sticky-top navbar-expand-lg px-4">
             <div class="container-fluid">
                 <a class="logo-todoexplosion" href="../index.html" >
@@ -50,9 +50,9 @@
             </div>
         </nav>
 
-        <div class="container contact py-5">
-            <div class="row contacto col-12 m-auto py-5">
-                <p class="text-center fs-2 fw-bold p-3">Formulario de contacto</p>
+        <div class="container contact py-5 fondo-terciario">
+            <div class="formulario row contacto col-12 m-auto py-5">
+                <p class="text-center fs-2 fw-bold p-5">FORMULARIO DE CONTACTO</p>
                 <form class="m-auto w-50">
                     <!-- Name input -->
                     <div class="form-outline mb-3">
@@ -84,10 +84,10 @@
             </div>
         
         
-            <div class="container col-12 d-flex justify-content-center flex-wrap py-5 fondo-primario">
+            <div class="container mt-5 col-11 d-flex justify-content-center flex-wrap py-5 fondo-primario">
                 <div class="dire row">
                     <h3 class="text-center fs-2 fw-bold">Dirección</h3>
-                    <p class="text-center fs-6 pb-1">Avenida Hipolito Yrigoyen, Burzaco.</p>
+                    <p class="text-center fs-6 pb-1">Av. Hipolito Yrigoyen, Burzaco.</p>
                 </div>
                 <div class="ubi row">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d26200.575428098622!2d-58.398545000000006!3d-34.829284!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd499a30a66bb%3A0xa96ca299e26edc13!2sAv.%20Hip%C3%B3lito%20Yrigoyen%2015040%2C%20B1852EMA%20Burzaco%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1653784239026!5m2!1ses-419!2sar"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
@@ -97,7 +97,7 @@
 
 
         <!-- Footer -->
-        <footer class="text-center text-white" style="background-color: #eeeeee;">
+        <footer class="text-center text-white fondo-terciario">
             <!-- Grid container -->
             <div class="container pt-4">
             <!-- Section: Social media -->
