--- a/pages/productos.html
+++ b/pages/productos.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../sass/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
 </head>
-<body>
+<body class="fondo-terciario">
     <nav class="encabezado navbar navbar sticky-top navbar-expand-lg px-4">
         <div class="container-fluid">
             <a class="logo-todoexplosion" href="../index.html" >
@@ -50,7 +50,7 @@
         </div>
     </nav>
 
-    <div class="product-container d-flex m-2 p-5 gap-2 flex-wrap justify-content-around">
+    <div class="product-container d-flex m-2 p-5 gap-2 flex-wrap justify-content-around fondo-terciario">
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/2 (1).png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -92,7 +92,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-white" style="background-color: #eeeeee;">
+    <footer class="text-center text-white fondo-terciario">
         <!-- Grid container -->
         <div class="container pt-4">
           <!-- Section: Social media -->
