--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,7 +52,7 @@
 
         <div class="container contact py-5 fondo-terciario">
             <div class="formulario row contacto col-12 m-auto py-5">
-                <p class="text-center fs-2 fw-bold p-5">FORMULARIO DE CONTACTO</p>
+                <h1 class="text-center fs-2 fw-bold p-5">FORMULARIO DE CONTACTO</h1>
                 <form class="m-auto w-50">
                     <!-- Name input -->
                     <div class="form-outline mb-3">
