--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -50,15 +50,16 @@
     </div>
   </nav>
 
-    <div  class="preg-frecu">
+    <div  class="preg-frecu fondo-terciario text-center">
+      <h1 class="m-2 pt-5 p-md-5">PREGUNTAS FRECUENTES</h1>
       <img src="../Imagenes/todoexplosionn.jpg" class="w-75 rounded mx-auto d-block py-5" alt="...">
     </div>
 
-    <div class="accordion pb-5">
+    <div class="accordion pb-5 fondo-terciario">
       <div class="accordion col-6 mx-auto" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingOne">
-            <button class="accordion-button text-light bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
+            <button class="boton acordeon-btn accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
               <strong class="strong">¿Que medios de pago aceptan?</strong>
             </button>
           </h2>
@@ -70,7 +71,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
-            <button class="accordion-button collapsed text-light bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
+            <button class="boton accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
               <strong>¿Realizan envios?</strong>
             </button>
           </h2>
@@ -82,7 +83,7 @@
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header" id="panelsStayOpen-headingThree">
-            <button class="accordion-button collapsed text-light bg-dark" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
+            <button class="boton accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
               <strong>¿Donde estamos ubicados?</strong>
             </button>
           </h2>
@@ -97,7 +98,7 @@
 
 
     <!-- Footer -->
-    <footer class="text-center text-white" style="background-color: #eeeeee;">
+    <footer class="text-center text-white fondo-terciario">
         <!-- Grid container -->
         <div class="container pt-4">
           <!-- Section: Social media -->
