--- a/pages/productos.html
+++ b/pages/productos.html
@@ -49,7 +49,7 @@
             </div>
         </div>
     </nav>
-
+    <div class="text-center"><h1 class="m-2 pt-5 p-md-5">¡SOMOS TODO EXPLOSIÓN!</h1></div>
     <div class="product-container d-flex m-2 p-5 gap-2 flex-wrap justify-content-around fondo-terciario">
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/2 (1).png" class="card-img-top" alt="...">
