--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>TODO EXPLOSION | Inicio</title>
         <meta name="keywords" content="herramientas, maquinas, jardineria, explosion, lusqtoff, dowen pagio, lq, burzaco">
         <meta name="description" content="Somos Todo Explosion, tenemos todo lo que buscas. Somos de BURZACO, zona sur. Venta de maquinas y herramientas. Todo para tu proyecto y/o empresa.">
-        <link rel="shortcut icon" href="../Imagenes/Logo/logo_todo_explosion-removebg-preview.png">
+        <link rel="shortcut icon" href="./Imagenes/Logo/logo_todo_explosion-removebg-preview.png">
         <link rel="stylesheet" href="./sass/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
     </head>
@@ -103,11 +103,11 @@
     </div>
 
     <!-- logos marcas -->
-    <div id="categorias fondo-terciario" class="row  m-0">
-        <div class="col-12 pt-3 justify-content-center">
-            <div class="flex row p-2 h-25 align-items-center">
-                <h1 class="text-categorias text-center pt-5">PRODUCTOS POR MARCAS</h1>
-                <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/logoDOWENPAGIO.png" alt="logo dowen"></a></div>
+    <div id="categorias" class="row m-0">
+        <div class="col-12 pt-3 justify-content-center fondo-terciario">
+            <div class="flex row p-2 h-25 align-items-center fw-bolder fondo-terciario">
+                <h1 class="text-categorias text-center pt-5 fs-2 fw-bold">PRODUCTOS POR MARCAS</h1>
+                <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-75 rounded mx-auto d-block" src="./Imagenes/Marcas/logoDOWENPAGIO.png" alt="logo dowen"></a></div>
                 <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/crossmaster-removebg-preview1.png" alt="logo crossmaster"></a></div>
                 <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/logo-lusqtoff-alpha1.png" alt="logo crossmaster"></a></div>
                 <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/logo-niwa-alpha1.png" alt="logo niwa"></a></div>
