cambios de estilos, y cambie collage de page inicio

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO EXPLOSION</title>
+    <title>TODO EXPLOSION | Productos</title>
+    <meta name="keywords" content="herramientas, maquinas, jardineria, explosion, lusqtoff, dowen pagio, lq, burzaco">
+    <meta name="description" content="Venta de maquinas y herramientas. Todo para tu proyecto y/o empresa.">
     <link rel="shortcut icon" href="../Imagenes/Logo/logo_todo_explosion-removebg-preview.png">
     <link rel="stylesheet" href="../sass/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
@@ -54,37 +56,37 @@
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/2 (1).png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text"><h6>Nombre producto</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><h6>Rotomartillo 600w Dowen Pagio</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/Compresor 50 litros lusqtoff 2 (1).png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text"><h6>Nombre producto</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><h6>Compresor 50lts Lusqtoff</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/Llave de impacto Dowen Pagio 400Nm  9993139  1 (1).png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text"><h6>Nombre producto</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><h6>Llave de impacto a bateria Dowen Pagio</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/Soldadora iron100 105a lusqtoff megairon kit mascara y escuadras  3 (1).png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text"><h6>Nombre producto</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><h6>COMBO Soldadora Iron100 Lusqtoff</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/Taladro de banco 13mm lusqtoff  1 (1) (2).png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text"><h6>Nombre producto</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><h6>Taladro de banco 13m Lusqtoff</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/Camilla mecanico crossmaster   1 (5).png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text"><h6>Nombre producto</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text"><h6>Camilla para mecanico Crossmaster</h6>Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
         </div>
     </div>
