--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TODO EXPLOSION</title>
+        <title>TODO EXPLOSION | Contacto</title>
+        <meta name="keywords" content="herramientas, maquinas, jardineria, explosion, lusqtoff, dowen pagio, lq, burzaco">
+        <meta name="description" content="Somos de BURZACO, zona sur. Telefono 11-12345678">
         <link rel="shortcut icon" href="../Imagenes/Logo/logo_todo_explosion-removebg-preview.png">
         <link rel="stylesheet" href="../sass/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
