--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TODO EXPLOSION</title>
+    <title>TODO EXPLOSION | Nosotros</title>
+    <meta name="keywords" content="herramientas, maquinas, jardineria, explosion, lusqtoff, dowen pagio, lq, burzaco">
+    <meta name="description" content="Somos Todo Explosion, tenemos todo lo que buscas. ">  
     <link rel="shortcut icon" href="../Imagenes/Logo/logo_todo_explosion-removebg-preview.png">
     <link rel="stylesheet" href="../sass/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
@@ -50,17 +52,19 @@
         </div>
     </nav>
 
-    <div class="text-center pt-5 p-md-5 fondo-terciario">
+    <section>
+        <div class="text-center pt-5 p-md-5 fondo-terciario">
             
-        <h1 class="m-2 pt-5 p-md-5">¡SOMOS TODO EXPLOSIÓN!</h1>
-        <p class="m-3 p-5">
-            Una empresa joven en pleno crecimiento conformada por un gran equipo.
-            Nuestro objetivo principal es brindarle al cliente el mejor asesoramiento de producto según sea su necesidad, nos capacitamos constantemente para eso.
-            Proveemos distintas marcas, lo mejor en relación precio/calidad!
-
-            BIENVENIDOS!
-        </p>
-    </div>
+            <h1 class="nosotros nosotros--titulo m-2 pt-5 p-md-5">¡SOMOS TODO EXPLOSIÓN!</h1>
+            <p class="nosotros nosotros--parrafo m-3 p-5">
+                Una empresa joven en pleno crecimiento conformada por un gran equipo.
+                Nuestro objetivo principal es brindarle al cliente el mejor asesoramiento de producto según sea su necesidad, nos capacitamos constantemente para eso.
+                Proveemos distintas marcas, lo mejor en relación precio/calidad!
+    
+                BIENVENIDOS!
+            </p>
+        </div>
+    </section>
 
 
 
