--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,6 +12,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
     </head>
     <body class="fondo-terciario">
+        <!-- Header -->
         <nav class="encabezado navbar navbar sticky-top navbar-expand-lg px-4">
             <div class="container-fluid">
                 <a class="logo-todoexplosion" href="../index.html" >
@@ -51,7 +52,7 @@
                 </div>
             </div>
         </nav>
-
+        <!-- Form -->
         <div class="container contact py-5 fondo-terciario">
             <div class="formulario row contacto col-12 m-auto py-5">
                 <h1 class="text-center fs-2 fw-bold p-5">FORMULARIO DE CONTACTO</h1>
@@ -123,12 +124,6 @@
             </div>
             <!-- Copyright -->
         </footer>
-
-
-
-
-
-
 
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
