--- a/pages/preguntasfrecuentes.html
+++ b/pages/preguntasfrecuentes.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="../sass/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
 </head>
-<body>
+<body class="fondo-terciario">
+  <!-- Header -->
   <nav class="encabezado navbar navbar sticky-top navbar-expand-lg px-4">
     <div class="container-fluid">
         <a class="logo-todoexplosion" href="../index.html" >
