--- a/pages/productos.html
+++ b/pages/productos.html
@@ -12,6 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
 </head>
 <body class="fondo-terciario">
+    <!-- Header -->
     <nav class="encabezado navbar navbar sticky-top navbar-expand-lg px-4">
         <div class="container-fluid">
             <a class="logo-todoexplosion" href="../index.html" >
@@ -51,7 +52,8 @@
             </div>
         </div>
     </nav>
-    <div class="text-center"><h1 class="m-2 pt-5 p-md-5">¡SOMOS TODO EXPLOSIÓN!</h1></div>
+
+    <div class="text-center"><h1 class="m-2 pt-5 p-md-5"> Productos</h1></div>
     <div class="product-container d-flex m-2 p-5 gap-2 flex-wrap justify-content-around fondo-terciario">
         <div class="card col-4" style="width: 18rem;">
             <img src="../Imagenes/LUSQTOFF/2 (1).png" class="card-img-top" alt="...">
