--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     
     <!-- collage -->
     <section>
-        <div class="collage-mobile fondo-terciario text-center p-5">
+        <div class="collage-mobile fondo-terciario text-center p-5 m-0">
             <a href=""><img src="./Imagenes/template (1).jpg" class="collageImg  img-fluid col-12 col-md-3 px-2 py-1" alt="..."></a>
             <a href=""><img src="./Imagenes/template.jpg" class="collageImg  img-fluid col-12 col-md-3 px-2 py-1" alt="..."></a>
             <a href=""><img src="./Imagenes/template (2).jpg" class="collageImg  img-fluid col-12 col-md-3 px-2 py-1" alt="..."></a>
@@ -131,7 +131,7 @@
             <a href=""><img src="./Imagenes/template8.jpg" class="collageImg  img-fluid col-12 col-md-3 px-2 py-1" alt="..."></a>
         </div>
         
-        <div id="collage-desktop" class="row photos fondo-terciario px-5 text-center">
+        <div id="collage-desktop" class="row photos fondo-terciario px-5 text-center m-0">
             <div class="col-6 col-md-4 p-2 item"><a href="./pages/productos.html" data-lightbox="photos"><img class="img-fluid" src="./Imagenes/template.jpg"></a></div>
             <div class="col-6 col-md-4 p-2 item"><a href="./pages/productos.html" data-lightbox="photos"><img class="img-fluid" src="./Imagenes/template (2).jpg"></a></div>
             <div class="col-6 col-md-4 p-2 item"><a href="./pages/productos.html" data-lightbox="photos"><img class="img-fluid" src="./Imagenes/template1.jpg"></a></div>
