--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 
     <!-- logos marcas -->
     <div id="categorias" class="row m-0">
-        <div class="col-12 pt-3 justify-content-center fondo-terciario">
-            <div class="flex row p-2 h-25 align-items-center fw-bolder fondo-terciario">
-                <h1 class="text-categorias text-center pt-5 fs-2 fw-bold">PRODUCTOS POR MARCAS</h1>
-                <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-75 rounded mx-auto d-block" src="./Imagenes/Marcas/logoDOWENPAGIO.png" alt="logo dowen"></a></div>
+        <div class="col-12 pt-3 justify-content-center fondo-terciario px-5">
+            <div class="flex row p-2 h-25 align-items-center  fw-bolder fondo-terciario">
+                <h1 class="text-categorias text-center text-size pt-5 fw-bold">PRODUCTOS POR MARCAS</h1>
+                <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/logoDOWENPAGIO.png" alt="logo dowen"></a></div>
                 <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/crossmaster-removebg-preview1.png" alt="logo crossmaster"></a></div>
                 <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/logo-lusqtoff-alpha1.png" alt="logo crossmaster"></a></div>
                 <div class="col-3 d-flex justify-content-center"><a href="./pages/productos.html"><img class="logomarca w-100 rounded mx-auto d-block" src="./Imagenes/Marcas/logo-niwa-alpha1.png" alt="logo niwa"></a></div>
